[gd_scene load_steps=8 format=3 uid="uid://e40ytarsr77s"]

[ext_resource type="Script" path="res://core/entities/entity.gd" id="1_sxr4k"]
[ext_resource type="Texture2D" uid="uid://cf5q0k11ebtek" path="res://core/battle/assets/ringaseprite.aseprite" id="3_csror"]
[ext_resource type="SpriteFrames" uid="uid://cf8na8xr4fkh0" path="res://core/entities/entity_assets/SpriteFrames/samuraiFrames.tres" id="3_dt58s"]
[ext_resource type="Texture2D" uid="uid://dxyhtnjbg4veq" path="res://user_interface/ui_assets/progress_bars/Under.png" id="3_lxhkd"]
[ext_resource type="Texture2D" uid="uid://so0qki34syyc" path="res://user_interface/ui_assets/progress_bars/Over.png" id="4_evyur"]
[ext_resource type="Texture2D" uid="uid://d1utwwftyv7ks" path="res://user_interface/ui_assets/progress_bars/Progress.png" id="5_85kte"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_np8il"]
radius = 40.0
height = 144.0

[node name="Entity" type="StaticBody2D"]
input_pickable = true
script = ExtResource("1_sxr4k")

[node name="SelectionRing" type="TextureRect" parent="."]
visible = false
offset_left = -96.0
offset_right = 96.0
offset_bottom = 128.0
texture = ExtResource("3_csror")
expand_mode = 2

[node name="Sprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = ExtResource("3_dt58s")
animation = &"dead"

[node name="Healthbar" type="TextureProgressBar" parent="."]
offset_left = -64.0
offset_top = 80.0
offset_right = 64.0
offset_bottom = 100.0
size_flags_horizontal = 4
size_flags_vertical = 4
value = 50.0
texture_under = ExtResource("3_lxhkd")
texture_over = ExtResource("4_evyur")
texture_progress = ExtResource("5_85kte")
tint_progress = Color(1, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_np8il")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="animation_looped" from="Sprite" to="." method="_on_knight_sprite_animation_looped"]
